--- a/public/.htaccess
+++ b/public/.htaccess
@@ -4,6 +4,9 @@
     </IfModule>
 
     RewriteEngine On
+    
+    # Ajuste para subdirectorios en localhost
+    RewriteBase /sisreservamedicasoring/public/
 
     # Handle Authorization Header
     RewriteCond %{HTTP:Authorization} .
