--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "postcss": "^8.4.49",
         "tailwindcss": "^3.4.17",
         "vite": "^5.4.21"
+    },
+    "dependencies": {
+        "laravel-echo": "^2.3.0",
+        "pusher-js": "^8.4.0"
     }
 }
